# forager-server

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
forager_backend/: manage.py  pyproject.toml
forager_backend/forager_backend/: asgi.py  settings.py  urls.py  wsgi.py
forager_backend/forager_backend_api/: apps.py  models.py  signals.py  tests.py  views.py
forager_embedding_server/: README.md  deploy-containers.sh  pyproject.toml
forager_embedding_server/containers/adder/: config.py  deploy.sh  handler.py  requirements.txt
forager_embedding_server/containers/bgsplit_mapper/: Dockerfile  config.py  deploy.sh  handler.py  model.py  requirements.txt  test.py
forager_embedding_server/containers/bgsplit_trainer/: .envrc  Dockerfile  config.py  dataset.py  deploy.sh  main.py  model.py  requirements.txt  test.py  training_loop.py  util.py  warmup_scheduler.py
forager_embedding_server/containers/clip-text-inference/: Dockerfile  config.py  deploy.sh  handler.py  requirements.txt  resources.txt
forager_embedding_server/containers/mapper/: Dockerfile  config.py  deploy.sh  handler.py  inference.py  requirements.txt  resources.txt
forager_embedding_server/containers/resizer/: Dockerfile  config.py  handler.py  requirements.txt
forager_embedding_server/containers/trainer/: Dockerfile  config.py  deploy.sh  main.py  requirements.txt
forager_embedding_server/src/: app.py  bgsplit_jobs.py  config.py  embedding_jobs.py  index_jobs.py  jobs_data.py  log.py  models.py  run.py  utils.py
forager_embedding_server/terraform/: adder.tf  bgsplit_mapper.tf  bgsplit_trainer.tf  bgsplit_trainer_tensorboard.tf  cluster.tf  filestore.tf  main.tf  mapper.tf  resizer.tf  terraform.tfvars  trainer.tf
forager_frontend/: dev_frontend.sh  pyproject.toml  run_frontend.sh
forager_frontend/src/node/: package.json
forager_frontend/src/node/public/: index.html
forager_frontend/src/node/src/: App.js  DatasetList.js  UserContext.js  constants.js  index.js  types.ts
forager_frontend/src/python/: app.py  build  log.py
forager_knn/: pyproject.toml
forager_knn/src/forager_knn/: utils.py
forager_knn/src/forager_knn/clusters/: __init__.py  gke_cluster.py  terraform.py
forager_knn/src/forager_knn/jobs/: __init__.py  defaults.py  jobs.py
forager_knn/src/forager_knn/mappers/: __init__.py  (+2 more)
(+43 files in other folders)
