[tool.poetry]
name = "forager_embedding_server"
version = "0.0.2-2"
description = ""
authors = ["Forager Researcher <fpoms@cs.stanford.edu>"]
packages = [
    { include = "forager_embedding_server", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "*"
sanic = "*"
scikit-learn = "*"
chest = "^0.2.3"
forager_knn = {path = "../forager_knn", develop = true}
forager_index = {path = "../forager_index", develop = true}
aiostream = "^0.4.1"
bidict = "^0.21.2"
scipy = "^1.6.0"
fastcluster = "==1.1.28"
torch = "^1.9"
torchvision = "^0.10"


[tool.poetry.dev-dependencies]
torch = "^1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
