[tool.poetry]
name = "forager_frontend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "forager_frontend", from = "src/python" },
]

[tool.poetry.dependencies]
sanic = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
