[tool.poetry]
name = "forager_knn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "knn", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = "*"
aiostream = "*"
dataclasses-json = "*"
numpy = "*"
runstats = "*"
#gcloud-aio-auth = "*"
#kubernetes_asyncio = "*"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
